# Solutions

Solution/: readme.txt
Solution/Projects/: CMake_readme.txt
Solution/Projects/BIT_Package/: readme.txt
Solution/Projects/BIT_Package/BIT_VM_Tool/: CMakeLists.txt
Solution/Projects/BIT_Package/BIT_VM_Tool/BIT_VM_Tool/: BIT_Functions.cpp  BIT_Functions.h  BIT_VM_Tool.h  CMakeLists.txt  main.cpp
Solution/Projects/TravellingSalesmanProblem_Package/: readme.txt
Solution/Projects/TravellingSalesmanProblem_Package/Travelling_Salesman_Problem/: CMakeLists.txt
Solution/Projects/TravellingSalesmanProblem_Package/Travelling_Salesman_Problem/Travelling_Salesman_Problem/: CMakeLists.txt  Default_Defines.h  TSP.cpp  TSP.h  main.cpp
